Fixed some bugs - visibility issue in accordion - pointer-events issue in accordion Features - change images to /images

--- a/week4/static/css/index.css
+++ b/week4/static/css/index.css
@@ -48,6 +48,8 @@
     padding: 0;
     height: calc(100% - 300px);
     transition: all 0.5s ease;
+    overflow: visible;
+    height: auto;
 }
 .sign-in-h2 {
     font-size: 100px;
@@ -58,11 +60,13 @@
     flex: 3;
     transition: all 0.5s ease;
     padding: 20px;
-    overflow: auto;
+    overflow: hidden; 
     overflow-y: hidden;
     background-color: #f8a5c2;
     position: relative;
-    height: 100%;
+    height: 800px;
+    /* height: 100%; */
+    /* min-height: 100%; */
 
     /* flex-direction: column;
     justify-content: center;
@@ -76,10 +80,12 @@ video {
     flex: 1;
     transition: all 0.5s ease;
     padding: 20px;
-    overflow: auto;
+    overflow: hidden;
     overflow-y: hidden;
     background-color: #4f4636; 
     position: relative;
+    /* height: 100%; */
+    /* min-height: 100%; */
 }
 .sign-in-form:hover { 
     flex: 9;
@@ -107,14 +113,23 @@ video {
     transition: opacity 0.6s;
 } */
 .unhovered > * {
-    opacity: 0;
+    /* display: none; */
+    visibility: hidden;
+    /* opacity: 0; */
     transition: opacity 0.6s;
+    pointer-events: none;
 }
 .unhovered .text-to-show {
+    visibility: visible;
     display: block;
     opacity: 1;
     color: white;
 }
+.hovered > * {
+    /* display: flex; */
+    visibility: visible;
+    pointer-events: auto;
+} 
 
 /* member.html */
 .member {
@@ -236,4 +251,24 @@ footer {
     bottom: 0;
     width: 100%;
     flex-shrink: 0;
+}
+
+@media screen and (max-width: 600px) {
+    .sign-in-form, .square-form {
+        flex-direction: column;
+        align-items: center;
+    }
+    .sign-in-form:hover {
+        flex: 6;
+    }
+    .square-form:hover {
+        flex: 15;
+    }
+    .sign-in-h2, .text-to-show {
+        font-size: 3rem;
+    }
+    /* Adjusting the font size of square number */
+    .square-num {
+        font-size: 2rem;
+    }
 }
